--- a/creations.html
+++ b/creations.html
@@ -52,6 +52,9 @@
     </nav>
     
     <main>
+        <div id="scrollTop">
+            <a href="#"><i class="fas fa-angle-double-up"></i></a>
+        </div>
         <section class="yellowBg">
             <h2 class="title">Mes Créations</h2>
         </section>
@@ -61,7 +64,7 @@
                 <h2 class="large">01</h2>
                 <h2>Site vitrine d'une agence de voyages</h2>
                 <p>J’ai eu la chance de mettre en place le site Web <a href="http://www.rond-point-evasion.fr">www.rond-point-evasion.fr</a> en tant qu’autodidacte avant même d’être formée à La Manu. Je l’ai alimenté et mis à jour régulièrement de 2015 à 2021 en conditions réelles.</p>
-                <a href="#" class="button project">Voir le projet</a>
+                <a href="https://www.rond-point-evasion.fr/" target="_blank" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
                     <img class="mockup" src="assets/img/mockupRpe-800.jpg" alt="Mock Up RPE">
@@ -78,7 +81,7 @@
                 <p>Tout premier projet réalisé en équipe. Réalisation de la page d’accueil d’un site web responsive pour une boutique d’artisanat au Havre qui s’appelle « Les Petites Mains de Chadou » (confection d’ouvrages en tissus faits main)</p>
                 <p>Entièrement réalisé en HTML5, CSS3 !</p>
                 <p>J’ai eu la chance d’être désignée comme Scrum Master pour ce projet ! 👩🏽‍💻</p>
-                <a href="#" class="button project">Voir le projet</a>
+                <a href="projet-chadou.html" class="button project">Voir le projet</a>
             </div>
         </section>
         <div class="separateur"></div>
@@ -87,7 +90,7 @@
                 <h2 class="large">03</h2>
                 <h2>Refonte d'un site existant</h2>
                 <p>Deuxième projet réalisé en équipe. Refonte d’un site internet à l’aide de Bootstrap. Nous étions 3 personnes à travailler sur ce projet.</p>
-                <a href="#" class="button project">Voir le projet</a>
+                <a href="projet-pteabreak.html" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
                     <img class="mockup" src="assets/img/pteabreak/Mockup-PteaBreak.jpg" alt="Mock Up Ptea">
@@ -103,7 +106,7 @@
                 <h2>Réalisation d'un jeu avec HTML/CSS & JQuery</h2>
                 <p>Challenge personnel réalisé en solo le temps d’un week-end.</p>
                 <p>N’hésitez pas à tester le jeu par vous-mêmes ici !👇🏽</p>
-                <a href="#" class="button project">Voir le projet</a>
+                <a href="https://elodie2812.github.io/WallBreaker/" target="_blank" class="button project">Voir le projet</a>
             </div>
         </section>
         <div class="separateur"></div>
@@ -113,7 +116,7 @@
                 <h2>Réalisation du jeu du Shifumi</h2>
                 <p>Troisième projet réalisé en équipe. J’étais de nouveau Scrum Master sur ce projet.</p>
                 <p>But >> Réaliser le jeu du Shifumi en JQuery avec fonction Drag&Drop, compteur de victoires et responsive !</p>
-                <a href="#" class="button project">Voir le projet</a>
+                <a href="projet-shifumi.html" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
                     <img class="mockup" src="assets/img/shifumi/mockUpShifu.jpg" alt="Mock Up Shifumi">
@@ -129,7 +132,18 @@
                 <h2>Création d'un Blog avec WordPress</h2>
                 <p>En respectant le cahier des charges, les contraintes et demandes du client.</p>
                 <p>S’approprier WordPress pour pouvoir expliquer au client comment ajouter des articles sur son blog par la suite.</p>
+                <a href="projet-blog.html" class="button project">Voir le projet</a>
+            </div>
+        </section>
+        <section class="container">
+            <div class="blockMockup">
+                <h2 class="large">07</h2>
+                <h2>Projet à Venir...</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
                 <a href="#" class="button project">Voir le projet</a>
+            </div>
+            <div class="blockMockup">
+                    <img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up">
             </div>
         </section>
        
