--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </nav>
     
     <main>
+        <div id="scrollTop">
+            <a href="#"><i class="fas fa-angle-double-up"></i></a>
+        </div>
         <section class="yellowBg">
             <h2 class="title">Bienvenue sur mon Portfolio</h2>
             <p>Avec un parcours atypique, j’ai commencé ma carrière professionnelle en tant qu’agent de voyages. Puis j’ai entamé une reconversion professionnelle vers les métiers du numérique. Actuellement en formation Webdesigner & Communication Digitale, j’ai su trouver ma voie dans ce vaste monde qu’est l’informatique.</p>
@@ -84,26 +87,26 @@
         
         <div class="container">
             <div class="blockImg">
-                <a href="#">
+                <a href="projet-blog.html">
                     <img class="mock" src="assets/img/blogVoyages/Mockup-wpblog.jpg" alt="Mock Up Blog Voyages">
                     <div class="overlay"></div>
                 </a>
             </div>
             <div class="blockImg">
-                <a href="#">
+                <a href="projet-pteabreak.html">
                     <img class="mock" src="assets/img/pteabreak/Mockup-PteaBreak.jpg" alt="Mock Up PteaBreak">
                     <div class="overlay"></div>
                 </a>
             </div>
             <div class="blockImg">
-                <a href="#">
-                    <img class="mock" src="assets/img/mockUpGouzou.jpg" alt="Mock Up Gouzou">
+                <a href="projet-shifumi.html">
+                    <img class="mock" src="assets/img/shifumi/mockUpShifu.jpg" alt="Mock Up Shifumi">
                     <div class="overlay"></div>
                 </a>
             </div>
         </div>
         <div class="center">
-            <a href="#" class="button">En Voir Plus...</a>
+            <a href="creations.html" class="button">En Voir Plus...</a>
         </div>
 
         <!--Section Contact-->
