--- a/quisuisje.html
+++ b/quisuisje.html
@@ -52,6 +52,9 @@
     </nav>
     
     <main>
+        <div id="scrollTop">
+            <a href="#"><i class="fas fa-angle-double-up"></i></a>
+        </div>
         <section class="yellowBg">
             <h2 class="title">À propos de moi</h2>
         </section>
@@ -119,26 +122,26 @@
         
         <div class="container">
             <div class="blockImg">
-                <a href="#">
+                <a href="projet-blog.html">
                     <img class="mock" src="assets/img/blogVoyages/Mockup-wpblog.jpg" alt="Mock Up Blog Voyages">
                     <div class="overlay"></div>
                 </a>
             </div>
             <div class="blockImg">
-                <a href="#">
+                <a href="projet-pteabreak.html">
                     <img class="mock" src="assets/img/pteabreak/Mockup-PteaBreak.jpg" alt="Mock Up PteaBreak">
                     <div class="overlay"></div>
                 </a>
             </div>
             <div class="blockImg">
-                <a href="#">
-                    <img class="mock" src="assets/img/mockUpGouzou.jpg" alt="Mock Up Gouzou">
+                <a href="projet-shifumi.html">
+                    <img class="mock" src="assets/img/shifumi/mockUpShifu.jpg" alt="Mock Up Shifumi">
                     <div class="overlay"></div>
                 </a>
             </div>
         </div>
         <div class="center">
-            <a href="#" class="button">En Voir Plus...</a>
+            <a href="creations.html" class="button">En Voir Plus...</a>
         </div>
 
         <!--Section Contact-->
