--- a/contact.html
+++ b/contact.html
@@ -66,13 +66,34 @@
                 <ul>
                     <li><i class="fas fa-user small"> </i>  Élodie Ferry</li>
                     <li><i class="fas fa-map-pin small"> </i>  Le Havre, France</li>
-                    <li><i class="fas fa-at small"> </i><a class="mail" href="mailto:elodie.ferry2812@gmail.com">  elodie.ferry2812@gmail.com</a></li>
                 </ul>
-                <p class="enlarge">Je suis joignable par mail à l'adresse <a class="mail" href="mailto:elodie.ferry2812@gmail.com">elodie.ferry2812@gmail.com</a>, via LinkedIn ou à l'aide du formulaire en bas de page.</p>
-                <a href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/"><i class="fab fa-linkedin-in linkedin"></i></a>
             </div>
+            <!--<div class="contactBlock">
+                <img class="fleche" src="assets/img/arrowRight.jpg" alt="Flèche">
+            </div>-->
             <div class="contactBlock">
-                <img class="me" src="assets/img/elo.jpg" alt="Photo Portait">
+                <ul>
+                    <li>
+                        <a class="mail" href="mailto:elodie.ferry2812@gmail.com">
+                            <i class="fas fa-at"> </i>  par mail
+                        </a>
+                    </li>
+                    <li>
+                        <a class="mail" href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/">
+                            <i class="fab fa-linkedin-in"></i>  LinkedIn
+                        </a>
+                    </li>
+                    <li>
+                        <a class="mail" href="https://github.com/elodie2812">
+                            <i class="fab fa-github"></i>  Github
+                        </a>
+                    </li>
+                    <li>
+                        <a class="mail" href="https://www.instagram.com/fougdu76/">
+                            <i class="fab fa-instagram"></i>  Instagram
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
         <div class="separateur"></div>
@@ -114,19 +135,15 @@
             <form method="post" action="traitement.php">
                 <ul>
                     <li>
-                        <label for="name">Nom : </label>
                         <input type="text" id="name" name="name" placeholder="Votre Nom">
                     </li>
                     <li>
-                        <label for="firstname">Prénom : </label>
                         <input type="text" id="firstname" name="firstname" placeholder="Votre Prénom">
                     </li>
                     <li>
-                        <label for="email">Email : </label>
                         <input type="email" id="email" name="email" placeholder="Votre Email">
                     </li>
                     <li>
-                        <label for="message">Message : </label>
                         <textarea id="message" name="message" placeholder="Votre Message"></textarea>
                     </li>
                 </ul>
@@ -142,10 +159,11 @@
             <li><a href="#">Mentions Légales</a></li>
         </ul>
         <div class="center">
-        <p class="text">Où me retrouver ?</p>
-        <a href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/elodie2812"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
+            <p class="text">Où me retrouver ?</p>
+            <a href="mailto:elodie2812@gmail.com"><i class="fas fa-at"></i></a>
+            <a href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/elodie2812"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
         </div>
         
         <p class="copyright">Copyright © Élodie Ferry - 2021</p>
