--- a/index.html
+++ b/index.html
@@ -117,19 +117,15 @@
             <form method="post" action="traitement.php">
                 <ul>
                     <li>
-                        <label for="name">Nom : </label>
                         <input type="text" id="name" name="name" placeholder="Votre Nom">
                     </li>
                     <li>
-                        <label for="firstname">Prénom : </label>
                         <input type="text" id="firstname" name="firstname" placeholder="Votre Prénom">
                     </li>
                     <li>
-                        <label for="email">Email : </label>
                         <input type="email" id="email" name="email" placeholder="Votre Email">
                     </li>
                     <li>
-                        <label for="message">Message : </label>
                         <textarea id="message" name="message" placeholder="Votre Message"></textarea>
                     </li>
                 </ul>
@@ -145,9 +141,10 @@
         </ul>
         <div class="center">
         <p class="text">Où me retrouver ?</p>
-        <a href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/elodie2812"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:elodie2812@gmail.com"><i class="fas fa-at"></i></a>
+            <a href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/elodie2812"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
         </div>
         
         <p class="copyright">Copyright © Élodie Ferry - 2021</p>
