--- a/projet-chadou.html
+++ b/projet-chadou.html
@@ -134,11 +134,12 @@
     <footer>
         <ul>
             <li class="text">Informations Légales</li>
-            <li><a href="#">Politique de Confidentialité</a></li>
-            <li><a href="#">Mentions Légales</a></li>
+            <li><a href="confidentialite.html">Politique de Confidentialité</a></li>
+            <li><a href="mentionslegales.html">Mentions Légales</a></li>
         </ul>
         <div class="center">
         <p class="text">Où me retrouver ?</p>
+        <a href="mailto:elodie2812@gmail.com"><i class="fas fa-at"></i></a>
         <a href="https://www.linkedin.com/in/%C3%A9lodie-ferry-%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%92%BB-3b3a18205/"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://github.com/elodie2812"><i class="fab fa-github"></i></a>
         <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
