--- a/contact.html
+++ b/contact.html
@@ -155,8 +155,8 @@
     <footer>
         <ul>
             <li class="text">Informations Légales</li>
-            <li><a href="#">Politique de Confidentialité</a></li>
-            <li><a href="#">Mentions Légales</a></li>
+            <li><a href="confidentialite.html">Politique de Confidentialité</a></li>
+            <li><a href="mentionslegales.html">Mentions Légales</a></li>
         </ul>
         <div class="center">
             <p class="text">Où me retrouver ?</p>
