--- a/creations.html
+++ b/creations.html
@@ -135,6 +135,7 @@
                 <a href="projet-blog.html" class="button project">Voir le projet</a>
             </div>
         </section>
+        <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">07</h2>
@@ -174,8 +175,8 @@
     <footer>
         <ul>
             <li class="text">Informations Légales</li>
-            <li><a href="#">Politique de Confidentialité</a></li>
-            <li><a href="#">Mentions Légales</a></li>
+            <li><a href="confidentialite.html">Politique de Confidentialité</a></li>
+            <li><a href="mentionslegales.html">Mentions Légales</a></li>
         </ul>
         <div class="center">
             <p class="text">Où me retrouver ?</p>
