--- a/quisuisje.html
+++ b/quisuisje.html
@@ -116,6 +116,11 @@
                 <br>Photoshop, Illustrator, Indesign</p>
             </article>
         </div>
+        <!--Section Vidéo-->
+        <section class="video">
+            <h2 class="center">Ils m'ont fait confiance... À votre tour !</h2>
+            <video id="videoSize"src="assets/video/Ils m'ont fait confiance....mp4" controls poster="assets/img/confiance.png"></video>
+        </section>
 
         <!--Section Contact-->
         <section class="contact">
