--- a/projet-blog.html
+++ b/projet-blog.html
@@ -9,7 +9,9 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Righteous&display=swap" rel="stylesheet">
-
+     <!-- Favicons -->
+     <link href="assets/img/favicon2.png" rel="icon">
+     
     <title>Mon Portfolio</title>
 </head>
 <body>
@@ -19,6 +21,7 @@
     </header>
     <!--Navbar Desktop-->
     <nav class="navbar">
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png"></a>
         <ul class="nav-menu">
             <li class="nav-items">
                 <a href="index.html" class="nav-links">Accueil</a>
@@ -49,6 +52,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png"></a>
     </nav>
     
     <main>
