--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </header>
     <!--Navbar Desktop-->
     <nav class="navbar">
-        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png"></a>
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png" alt="logo"></a>
         <ul class="nav-menu">
             <li class="nav-items">
                 <a href="index.html" class="nav-links">Accueil</a>
@@ -52,7 +52,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png"></a>
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png" alt="logo"></a>
     </nav>
     
     <main>
@@ -136,23 +136,8 @@
             <h2 class="center">COMMENÇONS UN NOUVEAU PROJET ENSEMBLE ! 
                 <br> <span class="white">CONTACTEZ-MOI !</span>
             </h2>
-            <form method="post" action="traitement.php">
-                <ul>
-                    <li>
-                        <input type="text" id="name" name="name" placeholder="Votre Nom">
-                    </li>
-                    <li>
-                        <input type="text" id="firstname" name="firstname" placeholder="Votre Prénom">
-                    </li>
-                    <li>
-                        <input type="email" id="email" name="email" placeholder="Votre Email">
-                    </li>
-                    <li>
-                        <textarea id="message" name="message" placeholder="Votre Message"></textarea>
-                    </li>
-                </ul>
-                <button type="submit">Envoyer</button>
-            </form>
+            <p><a href="mailto:elodie.ferry2812@gmail.com"><i class="far fa-envelope"></i></a></p>
+                <a href="mailto:elodie.ferry2812@gmail.com" class="contactButton"> Envoyer un mail <i class="far fa-paper-plane"></i></a>
         </section>
     </main>
     
