--- a/projet-shifumi.html
+++ b/projet-shifumi.html
@@ -21,7 +21,7 @@
     </header>
     <!--Navbar Desktop-->
     <nav class="navbar">
-        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png"></a>
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png" alt="logo"></a>
         <ul class="nav-menu">
             <li class="nav-items">
                 <a href="index.html" class="nav-links">Accueil</a>
@@ -52,7 +52,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png"></a>
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png" alt="logo"></a>
     </nav>
     
     <main>
