--- a/projet-pteabreak.html
+++ b/projet-pteabreak.html
@@ -78,7 +78,7 @@
                 <p>Nous nous sommes organisés à l’aide d’un Trello. Nous avons choisi ensemble les couleurs, typographies, images,etc…</p>
                 <p>Sandryne a réalisé la maquette sur Adobe XD. Elle s’est aussi chargée de refaire le logo sur Illustrator.</p>
                 <p>Pour l’intégration, nous avons réparti les tâches : Mohamed s’est occupé de la page  « Nos patisseries », Sandryne de la page « Boutique », et j’ai intégré les pages « Contact » et « Nos P’teas ».</p>
-                <p>Nous avons ensuite valider la structure HTML à l’aide de W3C Validator.</p>
+                <p>Nous avons ensuite validé la structure HTML à l’aide de W3C Validator.</p>
                 <p>La plus grosse difficulté sur ce projet était, pour moi, l’utilisation de Github pour « merger » nos travaux !</p>
             </div>
             <div class="blockImg">
