--- a/creations.html
+++ b/creations.html
@@ -71,13 +71,13 @@
                 <a href="https://www.rond-point-evasion.fr/" target="_blank" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/mockupRpe-800.jpg" alt="Mock Up RPE">
+                    <a href="https://www.rond-point-evasion.fr/" target="_blank"><img class="mockup" src="assets/img/mockupRpe-800.jpg" alt="Mock Up RPE"></a>
             </div>
         </section>
         <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/chadou/MockupPdmc.jpg" alt="Mock Up PDMC">
+                <a href="projet-chadou.html"><img class="mockup" src="assets/img/chadou/MockupPdmc.jpg" alt="Mock Up PDMC"></a>
             </div>
             <div class="blockMockup">
                 <h2 class="large">02</h2>
@@ -97,13 +97,13 @@
                 <a href="projet-pteabreak.html" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/pteabreak/Mockup-PteaBreak.jpg" alt="Mock Up Ptea">
+                <a href="projet-pteabreak.html"><img class="mockup" src="assets/img/pteabreak/Mockup-PteaBreak.jpg" alt="Mock Up Ptea"></a>
             </div>
         </section>
         <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/mockupWall.jpg" alt="Mock Up Wallbreaker">
+                <a href="https://elodie2812.github.io/WallBreaker/" target="_blank"><img class="mockup" src="assets/img/mockupWall.jpg" alt="Mock Up Wallbreaker"></a>
             </div>
             <div class="blockMockup">
                 <h2 class="large">04</h2>
@@ -123,13 +123,13 @@
                 <a href="projet-shifumi.html" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/shifumi/mockUpShifu.jpg" alt="Mock Up Shifumi">
+                <a href="projet-shifumi.html"><img class="mockup" src="assets/img/shifumi/mockUpShifu.jpg" alt="Mock Up Shifumi"></a>
             </div>
         </section>
         <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/blogVoyages/Mockup-wpblog.jpg" alt="Mock Up Blog">
+                <a href="projet-blog.html"><img class="mockup" src="assets/img/blogVoyages/Mockup-wpblog.jpg" alt="Mock Up Blog"></a>
             </div>
             <div class="blockMockup">
                 <h2 class="large">06</h2>
@@ -143,12 +143,48 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">07</h2>
+                <h2>Réalisation Polices & Pictogrammes</h2>
+                <p>But >>> Réaliser un abécédaire à l'aide d'Illustrator ainsi que des pictogrammes.</p>
+                <a href="illustrator.html" class="button project">Voir le projet</a>
+            </div>
+            <div class="blockMockup">
+                <a href="illustrator.html"><img class="mockup" src="assets/img/illustrator/typo.jpg" alt="Mock Up"></a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <a href="projet-magazine.html"><img class="mockup" src="assets/img/magazine/magazine-mockup-web.jpg" alt="Mock Up"></a>
+            </div>
+            <div class="blockMockup">
+                <h2 class="large">08</h2>
+                <h2>Réalisation d’un magazine</h2>
+                <p>Réalisation d’un magazine à l’aide des gabarits et mock-up réalisé sous Photoshop !</p>
+                <a href="projet-magazine.html" class="button project">Voir le projet</a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <h2 class="large">09</h2>
+                <h2>Réalisation d'un dépliant</h2>
+                <p>But >>> Réaliser un dépliant 3 volets, plis roulés à l'aide d'InDesign.</p>
+                <a href="projet-trifold.html" class="button project">Voir le projet</a>
+            </div>
+            <div class="blockMockup">
+                    <a href="projet-trifold.html"><img class="mockup" src="assets/img/trifold/mockupBodyWebCouv.jpg" alt="Mock Up"></a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up">
+            </div>
+            <div class="blockMockup">
+                <h2 class="large">10</h2>
                 <h2>Projet à Venir...</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
                 <a href="#" class="button project">Voir le projet</a>
-            </div>
-            <div class="blockMockup">
-                    <img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up">
             </div>
         </section>
        
