--- a/projet-magazine.html
+++ b/projet-magazine.html
@@ -60,27 +60,24 @@
             <a href="#"><i class="fas fa-angle-double-up"></i></a>
         </div>
         <section class="yellowBg">
-            <h2 class="title">Réalisation d'un Blog et de sa Newsletter</h2>
-            <p>WORDPRESS</p>
-            <p>En utilisant un builder de pages afin de construire le site.</p>
-            <p>En respectant le cahier des charges, les contraintes et demandes du client.</p>
+            <h2 class="title">Réalisation d’un magazine</h2>
+            <p>INDESIGN / PHOTOSHOP</p>
+            <p>Réalisation d’un magazine à l’aide des gabarits et mock-up réalisé sous Photoshop !</p>
         </section>
 
         <section class="chadou">
-            <img src="assets/img/blogVoyages/mockBlog.png" alt="Mock up Blog">
-            <h3>Projet réalisé en solo sous WordPress.</h3>
+            <img src="assets/img/magazine/magazine-mockup-web.jpg" alt="Mock up Magazine">
+            <h3>Projet réalisé en solo.</h3>
         </section>
 
         <section class="container">
             <div class="blockMockup">
-                <h2>Réalisation du Blog</h2>
-                <p>Pour ce projet, il fallait imaginer le thème du blog et rédiger 3 articles entre 300 et 400 mots minimum.</p>
-                <p>J’ai donc choisi le thème des voyages.</p>
-                <p>Le site devait être composé de 3 pages (Accueil, Articles et À propos) accessibles dans la barre de navigation.</p>
-                <p>Pour le builder, j’ai opté pour Divi.</p>
+                <h2>Travail sur InDesign</h2>
+                <p>Le but de cet exercice était de se familiariser et prendre en main le logiciel InDesign</p>
+                <p>Nous devions réaliser un magazine à l'aide des gabarits, nous avions carte blanche.</p>
             </div>
             <div class="blockImg">
-                <img class="teamWork" src="assets/img/blogVoyages/monblog.png" alt="Mon Blog">
+                <img class="indesign" src="assets/img/magazine/indesign.png" alt="Logo InDesign">
             </div>
         </section>
 
@@ -90,11 +87,10 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">01</h2>
-                <h2>Planche Tendance</h2>
-                <p>Choix des Polices & des Couleurs.</p>
+                <h2>Couverture du Magazine</h2>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/blogVoyages/plancheTendanceBlog.jpg" alt="Planche Tendance Blog">
+                    <img class="mockup" src="assets/img/magazine/couv.jpg" alt="Couverture du Magazine">
             </div>
         </section>
 
@@ -103,36 +99,19 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">02</h2>
-                <h2>Campagne d'Emailing</h2>
-                <p>Réalisation d’une Newsletter pour le blog du Globe-Trotter  à l’aide de Mailchimp.</p>
+                <h2>Intérieur du Magazine</h2>
+                <p>Exemple d'articles que l'on peut retrouver à l'intérieur du magazine.</p>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/blogVoyages/newsletterWpblog.jpg" alt="Mock Up Newsletter">
-            </div>
-            <div class="blockMockup">
-                <img class="mockup" src="assets/img/blogVoyages/newsletterBlog.png" alt="Newsletter Blog">
-            </div>
-        </section>
-
-        <div class="separateur"></div>
-
-        <section class="container">
-            <div class="blockMockup">
-                    <img class="mockup" src="assets/img/background-split-02-1024x452.jpeg" alt="Image Bureau">
-            </div>
-            <div class="blockMockup">
-                <h2 class="large">03</h2>
-                <h2>Mise en Ligne</h2>
-                <p>Mise en ligne à l’aide de Github pages.</p>
-                <a href="#" target="_blank" class="button project">Voir le résultat</a>
+                    <img class="mockup" src="assets/img/magazine/intérieurMag.jpg" alt="Image Lowercase Font">
             </div>
         </section>
 
         <div class="separateur"></div>
 
         <div class="buttonBlock">
-            <a href="projet-shifumi.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="illustrator.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="illustrator.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
+            <a href="projet-trifold.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
