--- a/projet-trifold.html
+++ b/projet-trifold.html
@@ -60,27 +60,25 @@
             <a href="#"><i class="fas fa-angle-double-up"></i></a>
         </div>
         <section class="yellowBg">
-            <h2 class="title">Réalisation d'un Blog et de sa Newsletter</h2>
-            <p>WORDPRESS</p>
-            <p>En utilisant un builder de pages afin de construire le site.</p>
-            <p>En respectant le cahier des charges, les contraintes et demandes du client.</p>
+            <h2 class="title">Réalisation d'un dépliant</h2>
+            <p>INDESIGN / PHOTOSHOP / ILLUSTRATOR</p>
+            <p>But >>> Réaliser un dépliant 3 volets, plis roulés à l'aide d'InDesign.</p>
         </section>
 
         <section class="chadou">
-            <img src="assets/img/blogVoyages/mockBlog.png" alt="Mock up Blog">
-            <h3>Projet réalisé en solo sous WordPress.</h3>
+            <img src="assets/img/trifold/mockupBodyWebCouv.jpg" alt="Mock up Polices">
+            <h3>Projet réalisé en solo.</h3>
         </section>
 
         <section class="container">
             <div class="blockMockup">
-                <h2>Réalisation du Blog</h2>
-                <p>Pour ce projet, il fallait imaginer le thème du blog et rédiger 3 articles entre 300 et 400 mots minimum.</p>
-                <p>J’ai donc choisi le thème des voyages.</p>
-                <p>Le site devait être composé de 3 pages (Accueil, Articles et À propos) accessibles dans la barre de navigation.</p>
-                <p>Pour le builder, j’ai opté pour Divi.</p>
+                <h2>Travail sur Indesign</h2>
+                <p>Le but de cet exercice était de se familiariser et prendre en main le logiciel InDesign.</p>
+                <p>Nous avions carte blanche pour crér un dépliant 3 volets, plis roulés sur le thème de notre choix.</p>
+                <p>J'ai choisi de faire le dépliant d'un centre de bien-être.</p>
             </div>
             <div class="blockImg">
-                <img class="teamWork" src="assets/img/blogVoyages/monblog.png" alt="Mon Blog">
+                <img class="indesign" src="assets/img/magazine/indesign.png" alt="Logo InDesign">
             </div>
         </section>
 
@@ -90,11 +88,10 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">01</h2>
-                <h2>Planche Tendance</h2>
-                <p>Choix des Polices & des Couleurs.</p>
+                <h2>Réalisation du Logo sous Illustrator</h2>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/blogVoyages/plancheTendanceBlog.jpg" alt="Planche Tendance Blog">
+                    <img class="illustrator" src="assets/img/trifold/logoBody&Soul.png" alt="Logo Body & Soul">
             </div>
         </section>
 
@@ -103,14 +100,10 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">02</h2>
-                <h2>Campagne d'Emailing</h2>
-                <p>Réalisation d’une Newsletter pour le blog du Globe-Trotter  à l’aide de Mailchimp.</p>
+                <h2>Couverture du dépliant</h2>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/blogVoyages/newsletterWpblog.jpg" alt="Mock Up Newsletter">
-            </div>
-            <div class="blockMockup">
-                <img class="mockup" src="assets/img/blogVoyages/newsletterBlog.png" alt="Newsletter Blog">
+                    <img class="mockup" src="assets/img/trifold/mockupBodyWebCouv.jpg" alt="Couverture du dépliant">
             </div>
         </section>
 
@@ -118,21 +111,31 @@
 
         <section class="container">
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/background-split-02-1024x452.jpeg" alt="Image Bureau">
+                <h2 class="large">03</h2>
+                <h2>Intérieur du dépliant</h2>
             </div>
             <div class="blockMockup">
-                <h2 class="large">03</h2>
-                <h2>Mise en Ligne</h2>
-                <p>Mise en ligne à l’aide de Github pages.</p>
-                <a href="#" target="_blank" class="button project">Voir le résultat</a>
+                    <img class="mockup" src="assets/img/trifold/mockupBodyWebInt.jpg" alt="Intérieur du dépliant">
+            </div>
+        </section>
+
+        <div class="separateur"></div>
+
+        <section class="container">
+            <div class="blockMockup">
+                <h2 class="large">04</h2>
+                <h2>Extérieur du dépliant</h2>
+            </div>
+            <div class="blockMockup">
+                    <img class="mockup" src="assets/img/trifold/mockupBodyWebExt.jpg" alt="Extérieur du dépliant">
             </div>
         </section>
 
         <div class="separateur"></div>
 
         <div class="buttonBlock">
-            <a href="projet-shifumi.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="illustrator.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="projet-magazine.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
+            <a href="creations.html" class="button below"> Retour à Mes Créations <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
