portfolio au 04jul21

--- a/creations.html
+++ b/creations.html
@@ -66,7 +66,7 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">01</h2>
-                <h2>Site vitrine d'une agence de voyages</h2>
+                <h2><strong>Site</strong> vitrine d'une agence de voyages</h2>
                 <p>J’ai eu la chance de mettre en place le site Web <a href="http://www.rond-point-evasion.fr">www.rond-point-evasion.fr</a> en tant qu’autodidacte avant même d’être formée à La Manu. Je l’ai alimenté et mis à jour régulièrement de 2015 à 2021 en conditions réelles.</p>
                 <a href="https://www.rond-point-evasion.fr/" target="_blank" class="button project">Voir le projet</a>
             </div>
@@ -92,7 +92,7 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">03</h2>
-                <h2>Refonte d'un site existant</h2>
+                <h2><strong>Refonte d'un site existant</strong></h2>
                 <p>Deuxième projet réalisé en équipe. Refonte d’un site internet à l’aide de Bootstrap. Nous étions 3 personnes à travailler sur ce projet.</p>
                 <a href="projet-pteabreak.html" class="button project">Voir le projet</a>
             </div>
@@ -133,7 +133,7 @@
             </div>
             <div class="blockMockup">
                 <h2 class="large">06</h2>
-                <h2>Création d'un Blog avec WordPress</h2>
+                <h2><strong>Création d'un Blog avec WordPress</strong></h2>
                 <p>En respectant le cahier des charges, les contraintes et demandes du client.</p>
                 <p>S’approprier WordPress pour pouvoir expliquer au client comment ajouter des articles sur son blog par la suite.</p>
                 <a href="projet-blog.html" class="button project">Voir le projet</a>
@@ -144,7 +144,7 @@
             <div class="blockMockup">
                 <h2 class="large">07</h2>
                 <h2>Réalisation Polices & Pictogrammes</h2>
-                <p>But >>> Réaliser un abécédaire à l'aide d'Illustrator ainsi que des pictogrammes.</p>
+                <p>But >>> Réaliser un abécédaire à l'aide d'<strong>Illustrator</strong> ainsi que des pictogrammes.</p>
                 <a href="illustrator.html" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
@@ -159,7 +159,7 @@
             <div class="blockMockup">
                 <h2 class="large">08</h2>
                 <h2>Réalisation d’un magazine</h2>
-                <p>Réalisation d’un magazine à l’aide des gabarits et mock-up réalisé sous Photoshop !</p>
+                <p>Réalisation d’un magazine à l’aide des gabarits et mock-up réalisé sous <strong>Photoshop</strong> !</p>
                 <a href="projet-magazine.html" class="button project">Voir le projet</a>
             </div>
         </section>
@@ -168,7 +168,7 @@
             <div class="blockMockup">
                 <h2 class="large">09</h2>
                 <h2>Réalisation d'un dépliant</h2>
-                <p>But >>> Réaliser un dépliant 3 volets, plis roulés à l'aide d'InDesign.</p>
+                <p>But >>> Réaliser un dépliant 3 volets, plis roulés à l'aide d'<strong>InDesign</strong>.</p>
                 <a href="projet-trifold.html" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
@@ -209,11 +209,15 @@
             <a href="https://github.com/elodie2812"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
         </div>
-        <p class="copyright">Copyright © Élodie Ferry - 2021</p>
+        <p class="copyright">Copyright © <strong>Élodie Ferry</strong> - 2021</p>
     </footer>
 
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5525ad1b2d.js" crossorigin="anonymous"></script>
+
+    <!--Javascript-->
+    <script src="assets/js/jquery-3.2.1.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
