--- a/illustrator.html
+++ b/illustrator.html
@@ -91,7 +91,7 @@
                 <h2>Abécédaire Majuscules</h2>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/illustrator/uppercase.png" alt="Image Uppercase Font">
+                    <a href="assets/img/illustrator/uppercase.png"><img class="mockup" src="assets/img/illustrator/uppercase.png" alt="Image Uppercase Font"></a>
             </div>
         </section>
 
@@ -103,7 +103,7 @@
                 <h2>Abécédaire Minuscules</h2>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/illustrator/lowercase.png" alt="Image Lowercase Font">
+                    <a href="assets/img/illustrator/lowercase.png"><img class="mockup" src="assets/img/illustrator/lowercase.png" alt="Image Lowercase Font"></a>
             </div>
         </section>
 
@@ -116,7 +116,7 @@
                 <p>Pictogrammes sous le thème d'un Festival</p>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/illustrator/picto.png" alt="Image Lowercase Font">
+                <a href="assets/img/illustrator/picto.png"><img class="mockup" src="assets/img/illustrator/picto.png" alt="Image Lowercase Font"><a href="#"></a>
             </div>
         </section>
 
@@ -145,6 +145,10 @@
 
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5525ad1b2d.js" crossorigin="anonymous"></script>
+
+    <!--Javascript-->
+    <script src="assets/js/jquery-3.2.1.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
