--- a/projet-trifold.html
+++ b/projet-trifold.html
@@ -74,7 +74,7 @@
             <div class="blockMockup">
                 <h2>Travail sur Indesign</h2>
                 <p>Le but de cet exercice était de se familiariser et prendre en main le logiciel InDesign.</p>
-                <p>Nous avions carte blanche pour crér un dépliant 3 volets, plis roulés sur le thème de notre choix.</p>
+                <p>Nous avions carte blanche pour créer un dépliant 3 volets, plis roulés sur le thème de notre choix.</p>
                 <p>J'ai choisi de faire le dépliant d'un centre de bien-être.</p>
             </div>
             <div class="blockImg">
@@ -157,5 +157,8 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5525ad1b2d.js" crossorigin="anonymous"></script>
 
+    <!--Javascript-->
+    <script src="assets/js/jquery-3.2.1.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
