--- a/projet-blog.html
+++ b/projet-blog.html
@@ -154,5 +154,9 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5525ad1b2d.js" crossorigin="anonymous"></script>
 
+    <!--Javascript-->
+    <script src="assets/js/jquery-3.2.1.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 </html>
