portfolio le 04jul21

--- a/projet-chadou.html
+++ b/projet-chadou.html
@@ -117,7 +117,7 @@
 
         <section class="container">
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/background-split-02-1024x452.jpeg" alt="Image Bureau">
+                    <img class="desk" src="assets/img/background-split-02-1024x452.jpeg" alt="Image Bureau">
             </div>
             <div class="blockMockup">
                 <h2 class="large">03</h2>
