--- a/illustrator.html
+++ b/illustrator.html
@@ -91,7 +91,7 @@
                 <h2>Abécédaire Majuscules</h2>
             </div>
             <div class="blockMockup">
-                    <a href="assets/img/illustrator/uppercase.png"><img class="mockup" src="assets/img/illustrator/uppercase.png" alt="Image Uppercase Font"></a>
+                    <img class="mockup" src="assets/img/illustrator/uppercase.png" alt="Image Uppercase Font">
             </div>
         </section>
 
@@ -103,7 +103,7 @@
                 <h2>Abécédaire Minuscules</h2>
             </div>
             <div class="blockMockup">
-                    <a href="assets/img/illustrator/lowercase.png"><img class="mockup" src="assets/img/illustrator/lowercase.png" alt="Image Lowercase Font"></a>
+                    <img class="mockup" src="assets/img/illustrator/lowercase.png" alt="Image Lowercase Font">
             </div>
         </section>
 
@@ -116,7 +116,7 @@
                 <p>Pictogrammes sous le thème d'un Festival</p>
             </div>
             <div class="blockMockup">
-                <a href="assets/img/illustrator/picto.png"><img class="mockup" src="assets/img/illustrator/picto.png" alt="Image Lowercase Font"><a href="#"></a>
+                <img class="mockup" src="assets/img/illustrator/picto.png" alt="Image Lowercase Font">
             </div>
         </section>
 
