--- a/projet-trifold.html
+++ b/projet-trifold.html
@@ -66,7 +66,7 @@
         </section>
 
         <section class="chadou">
-            <img src="assets/img/trifold/mockupBodyWebCouv.jpg" alt="Mock up Polices">
+            <img src="assets/img/trifold/mockupBodyWebCouv.jpg" alt="Mock up Dépliant">
             <h3>Projet réalisé en solo.</h3>
         </section>
 
@@ -90,8 +90,8 @@
                 <h2 class="large">01</h2>
                 <h2>Réalisation du Logo sous Illustrator</h2>
             </div>
-            <div class="blockMockup">
-                    <img class="illustrator" src="assets/img/trifold/logoBody&Soul.png" alt="Logo Body & Soul">
+            <div class="blockImg">
+                    <img class="illustrator bodyAndSoul" src="assets/img/trifold/logoBody&Soul.png" alt="Logo Body & Soul">
             </div>
         </section>
 
