portfolio le 05jul21

--- a/projet-magazine.html
+++ b/projet-magazine.html
@@ -103,7 +103,7 @@
                 <p>Exemple d'articles que l'on peut retrouver à l'intérieur du magazine.</p>
             </div>
             <div class="blockMockup">
-                    <img class="mockup" src="assets/img/magazine/intérieurMag.jpg" alt="Intérieur du magazine">
+                    <img class="mockup" src="assets/img/magazine/interieurMag.jpg" alt="Intérieur du magazine">
             </div>
         </section>
 
